10-6 alignment for molbile menus fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -65,7 +65,7 @@
   }
   .header__menu-icon {
     display: block;
-    margin-right: 10px;
+    margin-right: 60px;
   }
   .header__nav-item a {
     font-size: 8px;
