--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,7 +2,6 @@
   justify-content: center;
   padding: 1rem;
   margin-top: 40px;
-  justify-content: center;
 }
 
 .home__title {
@@ -19,9 +18,8 @@
   justify-items: center;
   justify-content: center;
   list-style-type: none;
-  margin-right: 30px;
+  margin-right: 60px;
 }
-
 .home__blog-card {
   background-color: white; /* White background for the blog card */
   margin: 10px 0; /* Space between blog cards */
