--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -82,7 +82,6 @@ h1 {
   font-family: Cabinet Grotesk;
   margin-left: 5px;
   color: black;
-  flex-direction: row;
 }
 
 .sidebar__nav-item a:hover {
